k8s/bes/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      nodeName: bes
      containers:
        - name: sabnzbd
          image: linuxserver/sabnzbd:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "512Mi"
      volumes:
        - name: config
          hostPath:
            path: /var/lib/k8s-state/sabnzbd
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /srv/media/Downloads
